<resources>
    <string name="app_name">Simulador</string>
    <string name="login_title">Hola, bienvenido</string>
    <string name="identification_hint">Identificación</string>
    <string name="password_hint">Contraseña</string>
    <string name="old_password_hint">Contraseña actual</string>
    <string name="new_password_hint">Nueva contraseña</string>
    <string name="password_confirmation_hint">Confirmacion de contraseña</string>
    <string name="password_change_title">Cambia tu contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="password_change_button">Aceptar</string>
    <string name="products_menu_item">Productos</string>
    <string name="transfers_menu_item">Movimientos</string>
    <string name="account_menu_item">Cuenta</string>
    <string name="create_account_title">Agrega una cuenta</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_type">Tipo de cuenta</string>
    <string name="account_type_1">Ahorros</string>
    <string name="account_type_2">Corriente</string>
    <string name="net_balance_hint">Balance neto</string>
    <string name="create_movement_title">Registrar un movimiento</string>
    <string name="movement_type_1">Consignacion</string>
    <string name="movement_type_2">Retiro</string>
    <string name="movement_value_hint">Valor</string>
    <string name="movement_destination_hint">Cuena destino</string>
    <string name="movement_type">Tipo de movimiento</string>
</resources>
