<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.usbcali.simulador.products.CreateProductFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif"
        android:text="@string/create_account_title"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccentSecondary"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutNetBalance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutNetBalance"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:theme="@style/AccentTextInput"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupAccountType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextNetBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/net_balance_hint"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorAccent"
            android:textCursorDrawable="@drawable/accent_cursor" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroupAccountType"
        android:layout_width="300dp"
        android:layout_height="77dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonChangePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_type" />

        <RadioButton
            android:id="@+id/radioButtonAccountType1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_type_1"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonAccountType2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_type_2" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonChangePassword"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccentLight"
        android:text="@string/password_change_button"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
