<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.usbcali.simulador.movements.CreateMovementFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif"
        android:text="@string/create_movement_title"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccentSecondary"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutDestination"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:theme="@style/AccentTextInput"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupAccountType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/movement_destination_hint"
            android:inputType="numberDecimal"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorAccent"
            android:textCursorDrawable="@drawable/accent_cursor" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutValue"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:theme="@style/AccentTextInput"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutDestination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/movement_value_hint"
            android:inputType="numberDecimal"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorAccent"
            android:textCursorDrawable="@drawable/accent_cursor" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroupAccountType"
        android:layout_width="300dp"
        android:layout_height="74dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreateMovement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/movement_type" />

        <RadioButton
            android:id="@+id/radioButtonMovementType1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/movement_type_1" />

        <RadioButton
            android:id="@+id/radioButtonMovementType2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/movement_type_2" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonCreateMovement"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccentLight"
        android:text="@string/password_change_button"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
