<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.usbcali.simulador.profile.PasswordChangeFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif"
        android:text="@string/password_change_title"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccentSecondary"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutOldPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutOldPassword"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:theme="@style/AccentTextInput"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/old_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorAccent"
            android:textCursorDrawable="@drawable/accent_cursor" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutNewPassword"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:theme="@style/AccentTextInput"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPasswordConfirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorAccent"
            android:textCursorDrawable="@drawable/accent_cursor" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPasswordConfirmation"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:theme="@style/AccentTextInput"
        app:layout_constraintBottom_toTopOf="@+id/buttonChangePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/password_confirmation_hint"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorAccent"
            android:textCursorDrawable="@drawable/accent_cursor"
            android:imeOptions="actionDone"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonChangePassword"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccentLight"
        android:text="@string/password_change_button"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
